<resources>
    <string name="app_name">Sunny</string>
    <string name="action_location_on_map">View location on map</string>    <!-- TODO: Remove-->
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>      <!-- TODO: Remove-->

    <!-- Messages -->
    <string name="url_empty_response" translatable="false">Empty response from URL!</string>
    <string name="no_app_to_open_map" translatable="false">Could not open %1$s on map using Implicit intent, no receiving apps installed!</string>
    <string name="null_share_action_provider" translatable="false">Share Action Provider is null!</string>

    <string name="title_activity_detail">Weather Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_key_location" translatable="false">location</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_default_location" translatable="false">London</string>
    <string name="pref_title_location_on_map">View location on map</string>

    <string name="pref_key_units" translatable="false">units</string>
    <string name="pref_title_pick_units">Pick your units</string>
    <string name="pref_default_units" translatable="false">metric</string>
    <string-array name="pref_units_list_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_list_values" translatable="false">
        <item>@string/pref_default_units</item>
        <item>imperial</item>
    </string-array>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
