<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="@string/pref_key_location"
        android:defaultValue="@string/pref_default_location"
        android:title="@string/pref_title_location" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_units"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:key="@string/pref_key_units"
        android:entries="@array/pref_units_list_titles"
        android:entryValues="@array/pref_units_list_values"
        android:title="@string/pref_title_pick_units" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
</PreferenceScreen>
